--- a/changelog.de
+++ b/changelog.de
@@ -1,7 +1,8 @@
 kwdjbdns-update (0.1.3-1) unstable; urgency=low
   * Änderung vom dhcp3 zu isc-dhcp-server.
+  * Support für systemd kam hinzu.
 
- -- Kai Wilke <kiste@netzworkk.de>  Sun, 16 Apr 2017 04:38:54 +0100
+ -- Kai Wilke <kiste@netzworkk.de>  Sun, 16 Apr 2017 10:00:54 +0100
 
 kwdjbdns-update (0.1.2-1) unstable; urgency=low
   * README Dateien aktualisiert.
