--- a/man/de/man1/kwdjbdns-update.1
+++ b/man/de/man1/kwdjbdns-update.1
@@ -2,12 +2,12 @@
 .\"     Title: KWDJBDNS_UPDATE
 .\"    Author: Kai Wilke <kiste@netzworkk.de>
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 04/13/2010
-.\"    Manual: Benutzerhandbuch f\(:ur kwdjbdns_update
-.\"    Source: Version 0.1.0
+.\"      Date: 04/16/2017
+.\"    Manual: Benutzerhandbuch f\(:ur kwdjbdns-update
+.\"    Source: Version 0.1.3
 .\"  Language: English
 .\"
-.TH "KWDJBDNS_UPDATE" "1" "04/13/2010" "Version 0.1.0" "Benutzerhandbuch f\(:ur kwdjbdns_"
+.TH "KWDJBDNS-UPDATE" "1" "04/16/2017" "Version 0.1.3" "Benutzerhandbuch f\(:ur kwdjbdns-update"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,23 +28,23 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-kwdjbdns_update \- ein dhcp\-to\-tinydns update Perl Script\&.
+kwdjbdns-update \- ein dhcp\-to\-tinydns update Perl Script\&.
 .SH "SYNTAX"
-.HP \w'\fBkwdjbdns_update\fR\ 'u
-\fBkwdjbdns_update\fR
+.HP \w'\fBkwdjbdns-update\fR\ 'u
+\fBkwdjbdns-update\fR
 .SH "BESCHREIBUNG"
 .PP
-\fBkwdjbdns_update\fR
+\fBkwdjbdns-update\fR
 ist ein Perl\-Script das die
 dhcpd\&.leases
 Datei des dhcp3\-servers \(:uberwacht und bei eventuellen Ver\(:anderungen die DNS\-Datenbank, des tinydns\-Servers, updatet\&.
 .SH "DATEI"
 .PP
-/etc/kwdjbdns_update\&.cf
+/etc/kwdjbdns-update\&.cf
 .RS 4
 Dies ist die Konfigurations Datei f\(:ur
-\fBkwdjbdns_update\fR\&. F\(:ur weitere Details siehe
-\fBkwdjbdns_update.cf\fR(5)\&.
+\fBkwdjbdns-update\fR\&. F\(:ur weitere Details siehe
+\fBkwdjbdns-update.cf\fR(5)\&.
 .RE
 .SH "MITWIRKENDE"
 .PP
@@ -55,7 +55,7 @@ Datei im
 Verzeichnis\&.
 .SH "SIEHE AUCH"
 .PP
-\fBkwdjbdns_update.cf\fR(5)
+\fBkwdjbdns-update.cf\fR(5)
 .SH "AUTOR"
 .PP
 \fBKai Wilke\fR <\&kiste@netzworkk\&.de\&>
