--- a/man/de/man5/kwdjbdns-update.cf.5
+++ b/man/de/man5/kwdjbdns-update.cf.5
@@ -2,12 +2,12 @@
 .\"     Title: KWDJBDNS_UPDATE.CF
 .\"    Author: Kai Wilke <kiste@netzworkk.de>
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 04/13/2010
+.\"      Date: 04/16/2017
 .\"    Manual: Dateiformat
-.\"    Source: Version 0.1.0
+.\"    Source: Version 0.1.3
 .\"  Language: English
 .\"
-.TH "KWDJBDNS_UPDATE\&.CF" "5" "04/13/2010" "Version 0.1.0" "Dateiformat"
+.TH "KWDJBDNS-UPDATE\&.CF" "5" "04/16/2017" "Version 0.1.0" "Dateiformat"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,15 +28,15 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-kwdjbdns_update.cf \- Konfigurations Datei f\(:ur kwdjbdns_update\&.
+kwdjbdns-update.cf \- Konfigurations Datei f\(:ur kwdjbdns-update\&.
 .SH "BESCHREIBUNG"
 .PP
 Beim Start von
-\fBkwdjbdns_update\fR
+\fBkwdjbdns-update\fR
 wird die Datei
-/etc/kwdjbdns_update\&.cf
+/etc/kwdjbdns-update\&.cf
 eingelesen\&. Sie beinhaltet die Variablen die von
-\fBkwdjbdns_update\fR
+\fBkwdjbdns-update\fR
 ben\(:otigt werden\&. Beginnt eine Zeile mit
 \(lq#\(rq
 oder ist leer wird dies als Kommentar interpretiert\&.
@@ -77,7 +77,7 @@ Beinhaltet den Dateinamen und den Pfad zur statischen DNS\-Datenbank\&.
 .RS 4
 \fBupdate_freq\fR
 beinhaltet den Intervall, in Sekunden, mit der
-\fBkwdjbdns_update\fR
+\fBkwdjbdns-update\fR
 die
 dhcpd\&.leases
 neu \(:uberpr\(:ufen soll\&. Standard ist 30\&.
@@ -89,16 +89,16 @@ Beinhaltet eine Integerzahl f\(:ur ausf\(:uhrlichere Systemeldungen\&. 0 bedeute
 .RE
 .SH "DATEI"
 .PP
-/etc/kwdjbdns_update\&.cf
+/etc/kwdjbdns-update\&.cf
 .RS 4
 Dies ist die Konfigurations Datei f\(:ur
-\fBkwdjbdns_update\fR\&. F\(:ur weitere Details siehe
-\fBkwdjbdns_update\fR(1)\&.
+\fBkwdjbdns-update\fR\&. F\(:ur weitere Details siehe
+\fBkwdjbdns-update\fR(1)\&.
 .RE
 .SH "SIEHE AUCH"
 .PP
 \fBdebconf\fR(1),
-\fBkwdjbdns_update\fR(1)
+\fBkwdjbdns-update\fR(1)
 .SH "AUTOR"
 .PP
 \fBKai Wilke\fR <\&kiste@netzworkk\&.de\&>
